# exchange-monitoring-lab

./: .gitignore  README.md  README_RU.md  pyproject.toml
.github/workflows/: tests.yml
docs/: CASE_STUDY.md  OPERATIONS_UPDATE_2026-07.md
examples/: sample_market_data.json
src/exchange_monitoring/: __init__.py  __main__.py  cli.py  formatting.py  models.py  normalizers.py  paper_exit.py  regime.py
tests/: test_cli_and_formatting.py  test_normalizers.py  test_paper_exit.py  test_regime.py
