[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange-monitoring-lab"
version = "0.1.0"
description = "A sanitized, paper-only MEXC and Hyperliquid monitoring portfolio project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Oleg Gulyaev" }
]
keywords = ["crypto", "monitoring", "mexc", "hyperliquid", "paper-trading"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
exchange-monitoring-demo = "exchange_monitoring.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


